...

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="380dp"
        android:layout_height="0dp"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_DoctorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_LastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:hint="NIC"
                android:textColorHint="#013073"
                app:layout_constraintBottom_toTopOf="@+id/Button_Logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Nic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/Spinner_Gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_MobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_City"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <Button
                android:id="@+id/Button_Update"
                android:layout_width="360dp"
                android:layout_height="47dp"
...
