...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home.A_Patient_Or_A_Doctor">

    <Button
        android:id="@+id/Patient_login_button"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginTop="324dp"
        android:background="@drawable/rectangle_11"
        android:text="I'm a patient"
        app:layout_constraintEnd_toEndOf="parent"
...
